texlive didn\'t like unicode character

--- a/school/elec_313/lab7/tex/report.tex
+++ b/school/elec_313/lab7/tex/report.tex
@@ -160,7 +160,7 @@ The following procedures were identified to observe the basic operation of MOSFE
 
 The \% difference is relatively close for $V_G$ and the $V_D$.  Using Equation~\ref{eq:I_D} to calculate a current of \SI{4.49}{mA} instead of the assumed \SI{4}{mA} from the prelab would have generated even closer calculated values for $V_G$ and $V_D$.  The relatively large \% difference for the $V_S$ values is probably due to the $V_{TN}$ not being \SI{2}{V} but instead more like \SI{2.3}{V}.
 
-The mean voltage gain ($A_V$) for the common-source amplifier is 1.90 (Table~\ref{tab:common-source}) and the output resistance ($R_o$) is \SI{9.9}{\kilo\ohm} or roughly the same as the \SI{1}{\kilo\ohm} drain resistor ($R_D$).  The output voltage is 180° out of phase from the input voltage.  The gain for the source-follower amplifier is 0.903 (Table~\ref{tab:source-follower}) and the output resistance is relatively low at \SI{43.6}{\ohm}.  The input and the output voltages are also in phase.   The input resistance is much higher than the output resistance therefore the output current is much higher.   A common-source amplifier is useful when a voltage gain is desired and when an output voltage is needed to be 180° out of phase.  A source-follower amplifier is useful when no voltage gain is desired, a large current gain is desired, and the output voltage is needed to be in phase with the input voltage.
+The mean voltage gain ($A_V$) for the common-source amplifier is 1.90 (Table~\ref{tab:common-source}) and the output resistance ($R_o$) is \SI{9.9}{\kilo\ohm} or roughly the same as the \SI{1}{\kilo\ohm} drain resistor ($R_D$).  The output voltage is \SI{180}{\degree} out of phase from the input voltage.  The gain for the source-follower amplifier is 0.903 (Table~\ref{tab:source-follower}) and the output resistance is relatively low at \SI{43.6}{\ohm}.  The input and the output voltages are also in phase.   The input resistance is much higher than the output resistance therefore the output current is much higher.   A common-source amplifier is useful when a voltage gain is desired and when an output voltage is needed to be \SI{180}{\degree} out of phase.  A source-follower amplifier is useful when no voltage gain is desired, a large current gain is desired, and the output voltage is needed to be in phase with the input voltage.
 
 \section{Equations}
 \label{sec:equations}
