Forgot to reset a couple resistor values

--- a/school/elec_313/lab7/tex/report.tex
+++ b/school/elec_313/lab7/tex/report.tex
@@ -48,7 +48,7 @@ The following procedures were identified to observe the basic operation of MOSFE
 \subsection{Common-Source Amplifier}
 
 \begin{enumerate}
-\item Build the circuit shown in Figure~\ref{schem:common-source}.  Use the closest resistor values available for R1 and Rs.
+\item Build the circuit shown in Figure~\ref{schem:common-source}.  Use the closest resistor values available for $R_1$ and $R_S$.
 \item Measure and record the drain current and DC voltages at all terminals of the MOSFET.
 \item Set the function generator for a \SI{200}{V_{pp}}, \SI{20}{kHz} sine wave with \SI{0}{VDC} offset.  Connect it to $V_{in}$.
 \item Connect a \SI{100}{\kilo\ohm} load resistor from $V_{out}$ to ground.  This will be considered a no-load scenario.
