Circuit, equation, objective

--- a/school/elec_313/lab8/tex/header.tex
+++ b/school/elec_313/lab8/tex/header.tex
@@ -25,7 +25,7 @@
 \usepackage{subcaption}
 
 \author{}
-\title{ELEC-313 \\ Lab 7: MOSFET Amplifier Circuits\\ }
+\title{ELEC-313 \\ Lab 8: Bipolar Junction Transistor Characterization\\ }
 \date{\today}
 
 % \loadglsentries{acronyms} % Actually loads 'acronyms.tex'
@@ -37,7 +37,7 @@
 
 \begin{center}
   \begin{tabular}{lr}
-    Date Performed: & November 06, 2013 \\
+    Date Performed: & November 13, 2013 \\
     Partners:       & Charles Pittman    \\
     & Stephen Wilson     \\
   \end{tabular}
