--- a/school/elec_313/lab8/tex/report.tex
+++ b/school/elec_313/lab8/tex/report.tex
@@ -138,7 +138,11 @@ $V_{CE}$.  If $I_B$ has drifted, readjust $V_{BB}$ before recording the values o
 %
 \begin{equation}
   \label{eq:hoe}
-  h_{oe} \approx \frac{1}{r_o} = \frac{\Delta i_C}{\Delta v_{CE}}
+  h_{oe} \approx \frac{1}{r_o} = \frac{\Delta I_C}{\Delta V_{CE}}
+\end{equation}
+\begin{equation}
+  \label{eq:beta}
+  \beta = \frac{I_C}{I_E}
 \end{equation}
 % \begin{equation}
 %   \label{eq:amp}
