--- a/school/elec_313/lab8/tex/report.tex
+++ b/school/elec_313/lab8/tex/report.tex
@@ -177,6 +177,20 @@ $V_{CE}$.  If $I_B$ has drifted, readjust $V_{BB}$ before recording the values o
   \caption{\label{tab:beta_avg} Average values of $\beta$}
 \end{table}
 
+\begin{table}[hbtp]
+  \centering
+  \begin{tabular}{ccc}
+    $I_B$                & $h_{oe}$ & $r_o$            \\
+    (\si{\micro\ampere}) &          & (\si{\kilo\ohm}) \\
+    \hline
+    20                   & 7.412E-4 & 1.349            \\
+    50                   & 3.669E-4 & 2.726            \\
+    80                   & 9.950E-5 & 10.10            \\
+    100                  & 1.700E-6 & 58.82            \\
+  \end{tabular}
+  \caption{\label{tab:hoe} $h_{oe}$ vs. $r_o$}
+\end{table}
+
 \section{Conclusion}
 \label{sec:conclusion}
 
