Turning off formatting of graph legend until I can do it right.

--- a/school/elec_313/lab8/tex/graph.tex
+++ b/school/elec_313/lab8/tex/graph.tex
@@ -111,13 +111,13 @@
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(5816,4602){\makebox(0,0)[r]{\strut{}$I_B = $SI{20}{microampere}}}%
+      \put(5816,4602){\makebox(0,0)[r]{\strut{}$I_B$ = 20 uA}}%
       \csname LTb\endcsname%
-      \put(5816,4382){\makebox(0,0)[r]{\strut{}$I_B = $SI{50}{microampere}}}%
+      \put(5816,4382){\makebox(0,0)[r]{\strut{}$I_B$ = 50 uA}}%
       \csname LTb\endcsname%
-      \put(5816,4162){\makebox(0,0)[r]{\strut{}$I_B = $SI{80}{microampere}}}%
+      \put(5816,4162){\makebox(0,0)[r]{\strut{}$I_B$ = 80 uA}}%
       \csname LTb\endcsname%
-      \put(5816,3942){\makebox(0,0)[r]{\strut{}$I_B = $SI{100}{microampere}}}%
+      \put(5816,3942){\makebox(0,0)[r]{\strut{}$I_B$ = 100 uA}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{graph}}%
