Adding rest of the tables

--- a/school/elec_313/lab8/tex/header.tex
+++ b/school/elec_313/lab8/tex/header.tex
@@ -45,10 +45,10 @@
 
 \newpage
 
-% \tableofcontents
-% \listoffigures
-% \listoftables
-% \newpage
+\tableofcontents
+\listoffigures
+\listoftables
+\newpage
 
 % Number the enumerate environment (unordered lists) by letter:
 % \renewcommand{\labelenumi}{\alph{enumi}.}
