Cleaning up environment a bit

--- a/school/elec_313/lab8/tex/report.tex
+++ b/school/elec_313/lab8/tex/report.tex
@@ -2,12 +2,10 @@
 \input{./header.tex}
 
 \section{Objective}
-\label{sec:objective}
 
 The objective is to plot the output characteristic of a common-emmitter transistor circuit, and use it to determine the current gain and output conductance.
 
 \section{Equipment}
-\label{sec:equipment}
 
 \begin{tabular}{ll}
   \centering
@@ -18,7 +16,6 @@ The objective is to plot the output characteristic of a common-emmitter transist
 \end{tabular}
 
 \section{Schematics}
-\label{sec:schematics}
 
 \begin{figure}[hbtp]
   \centering
@@ -41,18 +38,12 @@ The objective is to plot the output characteristic of a common-emmitter transist
 % \end{figure}
 
 \section{Procedure}
-\label{sec:procedure}
 
 \begin{enumerate}
 \item Construct the circuit of Figure~\ref{fig:circuit}.  Use the +\SI{6}{V} power supply for $V_{BB}$ and the +\SI{25}{V} supply for $V_{CC}$.  Be sure to keep the connection distance between the capacitor and the transistor short.  Use the HP multimeter to measure the base current ($I_B$) on the source side of the capacitor and Fluke multimeters to measure the collector voltage and current ($V_{CE}$ and $I_C$).
-
 \item Adjust $V_{BB}$ so that base current ($I_B$) is \SI{20}{\micro\ampere}.
-
 \item Adjust $V_{CC}$ from 0.5 -- \SI{1.5}{V} in \SI{0.25}{V} steps, then from 2 -- \SI{20}{V} in \SI{2}{V} steps.
-
-\item At each step measure the collector current, $I_C$, and the collector-to-emitter voltage,
-$V_{CE}$.  If $I_B$ has drifted, readjust $V_{BB}$ before recording the values of $I_C$ and $V_{CE}$.
-
+\item At each step measure the collector current, $I_C$, and the collector-to-emitter voltage, $V_{CE}$.  If $I_B$ has drifted, readjust $V_{BB}$ before recording the values of $I_C$ and $V_{CE}$.
 \item Adjust $V_{BB}$ for a base current of \SI{50}{\micro\ampere}, \SI{80}{\micro\ampere}, and \SI{100}{\micro\ampere}.  Repeat steps 3 and 4 at each $I_B$ value.
 \end{enumerate}
 
@@ -249,7 +240,6 @@ $V_{CE}$.  If $I_B$ has drifted, readjust $V_{BB}$ before recording the values o
 \label{sec:conclusion}
 
 \section{Equations}
-\label{sec:equations}
 
 % LaTeX sees blank lines as a start of another paragraph.  To avoid
 % unnecessary vertical spaces between equations, and still visually
