--- a/school/elec_313/lab8/tex/report.tex
+++ b/school/elec_313/lab8/tex/report.tex
@@ -40,6 +40,7 @@ The objective is to plot the output characteristic of a common-emmitter transist
 \section{Procedure}
 
 \begin{enumerate}
+The following steps were observed to plot the output characteristic of a common emmitter transistor circuit:
 \item Construct the circuit of Figure~\ref{fig:circuit}.  Use the +\SI{6}{V} power supply for $V_{BB}$ and the +\SI{25}{V} supply for $V_{CC}$.  Be sure to keep the connection distance between the capacitor and the transistor short.  Use the HP multimeter to measure the base current ($I_B$) on the source side of the capacitor and Fluke multimeters to measure the collector voltage and current ($V_{CE}$ and $I_C$).
 \item Adjust $V_{BB}$ so that base current ($I_B$) is \SI{20}{\micro\ampere}.
 \item Adjust $V_{CC}$ from 0.5 -- \SI{1.5}{V} in \SI{0.25}{V} steps, then from 2 -- \SI{20}{V} in \SI{2}{V} steps.
