Simple spellcheck.  Sanitizing some input.

--- a/school/elec_313/lab8/tex/report.tex
+++ b/school/elec_313/lab8/tex/report.tex
@@ -241,11 +241,11 @@ The following steps were observed to plot the output characteristic of a common 
 \section{Conclusion}
 \label{sec:conclusion}
 
-As shown in Figure ??, the family of curves associated with the 4 IB currents loosely follow the typical plot of Bipolar Junction Transmitters (BJTs).  The mode of operation of the transistor transitions to the “forward-active mode” when VCE is approximately greater than .2 V. Also, as IB increases, the slope of the IC to VCE increases as seen in Table ??
+As shown in Figure ??, the family of curves associated with the 4 $I_B$ currents loosely follow the typical plot of Bipolar Junction Transmitters (BJTs).  The mode of operation of the transistor transitions to the “forward-active mode” when $V_{CE}$ is approximately greater than \SI{0.2}{V}.  Also, as $I_B$ increases, the slope of the $I_C$ to $V_{CE}$ increases as seen in Table ??
 
-Tables 2b), 2a)_1, 2a)_2, and 2a)_3 show that as IB increases, the ratio of IC to IB (ß [also known as the current gain]) increases. But, this change in ß seems to “taper off” as the IB current (Table 2b) increases such that if one were to plot mean ß vs. IB, it would resemble logarithmic growth. For each of the values of IB; as IC and VCE increase, ß increases as well (as shown in Table 2a). If one were to plot mean ß vs. VCE , I suspect it would resemble exponential growth though there is minimal evidence to prove this, considering only three data points are provided in Tables 2a)_1, 2a)_2, and 2a)_3.
+Tables 2b, 2a1, 2a2, and 2a3 show that as $I_B$ increases, the ratio of $I_C$ to $I_B$ ($\beta$ [also known as the current gain]) increases.  But, this change in $\beta$ seems to “taper off” as the $I_B$ current (Table 2b) increases such that if one were to plot mean $\beta$ vs. $I_B$, it would resemble logarithmic growth.  For each of the values of $I_B$; as $I_C$ and $V_{CE}$ increase, $\beta$ increases as well (as shown in Table 2a).  If one were to plot mean $\beta$ vs. $V_{CE}$ , I suspect it would resemble exponential growth though there is minimal evidence to prove this, considering only three data points are provided in Tables 2a1, 2a2, and 2a3.
 
-Figure ?? shows the slope of each of the family of curves  for VCE values greater than 3 V. The output conductance hoe was conducted with the slope of each of the 4 the trend line equations and the Equation ??. As IB increased, hoe increased.Therefor, as IB in creased, Current gain ß becasue the ouput resitance ro decreased.
+Figure ?? shows the slope of each of the family of curves  for $V_{CE}$ values greater than \SI{3}{V}.  The output conductance $h_{oe}$ was conducted with the slope of each of the 4 the trend line equations and the Equation ??.  As $I_B$ increased, $h_{oe}$ increased.   Therefore, as $I_B$ increased, current gain $\beta$ because the ouput resitance $r_o$ decreased.
 
 \section{Equations}
 
