--- a/school/elec_313/lab8/tex/report.tex
+++ b/school/elec_313/lab8/tex/report.tex
@@ -224,6 +224,12 @@ The following steps were observed to plot the output characteristic of a common 
   \caption{\label{tab:beta_VCE} Average values of $\beta$ per $V_{CE}$}
 \end{table}
 
+\begin{figure}[hbtp]
+  \centering
+  \resizebox{1.0\textwidth}{!}{\input{graph2.tex}}
+  \caption{\label{fig:graph2} $V_{CE}$ vs. $I_C$, $V_{CE} > 0$}
+\end{figure}
+
 \begin{table}[hbtp]
   \centering
   \begin{tabular}{ccc}
@@ -246,7 +252,7 @@ As shown in Figure~\ref{fig:graph}, the family of curves associated with the fou
 
 Tables \ref{tab:1}, \ref{tab:2}, \ref{tab:3}, and \ref{tab:4} show that as $I_B$ increases, the ratio of $I_C$ to $I_B$ (current gain, $\beta$) also increases.  This change in $\beta$ seems to ``taper off'' as $I_B$ increases such that if one were to plot mean $\beta$ vs. $I_B$, it would resemble logarithmic growth.  %[[Not sure which three points are being referred to, but this seems tangential.]]If one were to plot mean $\beta$ vs. $V_{CE}$, I suspect it would resemble exponential growth, though there is minimal evidence to prove this, considering only three data points are provided in Tables \ref{tab:da2a1}, \ref{tab:da2a2}, and \ref{tab:da2a3}.
 
-Figure ?? shows the slope of each of the family of curves for $V_{CE}$ values greater than \SI{3}{V}.  The output conductance ($h_{oe}$) was conducted with the slope of each of the four the trend line equations and Equation~\ref{eq:hoe}.  As $I_B$ increased, $h_{oe}$ increased.   % [[This was already stated.]]Therefore, as $I_B$ increased, current gain $\beta$ because the output resistance $r_o$ decreased.
+Figure~\ref{fig:graph2} shows the slope of each of the family of curves for $V_{CE}$ values greater than \SI{3}{V}.  The output conductance ($h_{oe}$) was conducted with the slope of each of the four the trend line equations and Equation~\ref{eq:hoe}.  As $I_B$ increased, $h_{oe}$ increased.   % [[This was already stated.]]Therefore, as $I_B$ increased, current gain $\beta$ because the output resistance $r_o$ decreased.
 
 \section{Equations}
 
