Forgot to update Materials

--- a/school/elec_313/lab8/tex/report.tex
+++ b/school/elec_313/lab8/tex/report.tex
@@ -9,10 +9,9 @@ The objective is to plot the output characteristic of a common-emitter transisto
 
 \begin{tabular}{ll}
   \centering
-  Transistor: 2N7000               & Power supply: HP E3631A            \\
-  Function generator: HP 33120 & Multimeter: HP 34401A              \\
-  Oscilloscope: Agilent 54622D & Capacitors: \SI{0.1}{\micro\farad} \\
-  \multicolumn{2}{l}{Resistors: \SI{100}{\ohm}, \SI{300}{\ohm}, \SI{470}{\ohm}, \SI{1}{\kilo\ohm} (x2) \SI{33}{\kilo\ohm}, \SI{100}{\kilo\ohm} (x2)} \\
+  Transistor: 2N2222A               & Power supply: HP E3631A            \\
+  Resistors: \SI{22}{\kilo\ohm}, \SI{33}{\kilo\ohm}, \SI{220}{\ohm} (x2) &   Capacitor: \SI{0.1}{\micro\farad} \\
+ Multimeters: HP 34401A, Fluke 8010A (x2) & \\
 \end{tabular}
 
 \section{Schematics}
